--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -1,34 +1,58 @@
 /* app css stylesheet */
 
 .menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+    list-style: none;
+    border-bottom: 0.1em solid black;
+    margin-bottom: 2em;
+    padding: 0 0 0.5em;
 }
 
 .menu:before {
-  content: "[";
+    content: "[";
 }
 
 .menu:after {
-  content: "]";
+    content: "]";
 }
 
 .menu > li {
-  display: inline;
+    display: inline;
 }
 
 .menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+    content: "|";
+    padding-right: 0.3em;
 }
 
 .menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+    content: "";
+    padding: 0;
 }
 
-div.ng-view {
-    border: 1px solid green;
+.profile{
+    margin: 2em 0 4em 2em;
+    width: 600px;
+}
+
+.profile-left{
+    float: left;
+    width: 50%
+}
+
+.profile-right{
+    float: right;
+    width: 50%;
+}
+
+.profile-right h6{
+    display: inline-block;
+}
+
+input.ng-invalid{
+    background-color: #ffcccc;
+}
+
+#drop-target{
+    width: 300px;
+    height: 300px;
 }
